Ported Public/User

--- a/Public/User/account.html
+++ b/Public/User/account.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="/style-responsive.css">
     <link rel="stylesheet" href="/style-forms.css">
     <script src="/common.js"></script>
-    <title>Log in - Saste Nashe</title>
+    <title>Log in - CZNE</title>
 </head>
 <body id="body">
 
 <div class="header_1">
     <a href="/app" class="header_link">Save more on app</a>
-    <a href="/affiliate" class="header_link">Saste Nashe affiliate</a>
+    <a href="/affiliate" class="header_link">CZNE affiliate</a>
     <a href="/sell" class="header_link">Become a seller</a>
     <a href="/customer-care" class="header_link">Customer care</a>
     <a href="/disclaimer" class="header_link">Disclaimer</a>
@@ -26,14 +26,16 @@
 <div class="navigation">
     <div class="left">
         <img src="https://images.vexels.com/media/users/3/217793/isolated/preview/0956022a968a707c607256b3131d1f7f-abundant-smoke-icon.png" alt="ico" class="logimg">
-        <a href="/">SasteNashe</a>
+        <a href="/">CZNE</a>
     </div>
     <div class="right">
         <a href="/products" class="nav_link">Products</a>
         <a href="/category" class="nav_link">Category</a>
-        <!--        <a href="/gallery" class="nav_link">Gallery</a>-->
         <a href="/recently-sold" class="nav_link">Recently sold</a>
         <a href="/cart" class="nav_link">Cart</a>
+        <a href="/sell" class="nav_link">Sell</a>
+        <a href="/disclaimer" class="nav_link">Disclaimer</a>
+        <a href="/login" class="nav_link">Login</a>
     </div>
 </div>
 
@@ -88,13 +90,14 @@
 </div>
 
 <div class="footer">
-    <div class="footer_top">SasteNashe by SolidPixel</div>
+    <div class="footer_top">CZNE by SolidPixel</div>
     <div class="footer_bottom">
         <div class="footer_panel">
             <div class="footer_heading">SolidPixel</div>
             <a href="/app" class="footer_element">Download app</a>
             <a href="/affiliate" class="footer_element">Join affiliate</a>
             <a href="/sell" class="footer_element">Sell your product</a>
+            <a href="/disclaimer" class="footer_element">Disclaimer</a>
         </div>
         <div class="footer_panel">
             <div class="footer_heading">Policies</div>
@@ -108,6 +111,7 @@
             <a href="/login" class="footer_element">Login</a>
             <a href="/signup" class="footer_element">Sign up</a>
             <a href="/account" class="footer_element">Account</a>
+            <a href="/customer-care" class="footer_element">Customer Care</a>
         </div>
     </div>
 </div>
